// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`protect should protect player 1`] = `
"*Игрок 2* пытался атаковать *Игрок 1*, но у него не получилось
_Защита_ *Игрок 1*: 📖72"
`;

exports[`protect should not get exp if protect enemy 1`] = `
"*Игрок 2* пытался атаковать *Игрок 1*, но у него не получилось
_Защита_ *Игрок 1*: 📖48,*Игрок 2*: 📖0"
`;
